--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,16 +19,19 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.navbelt.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.navbelt.Waypoints"
-            android:label="@string/title_activity_waypoints" >
+            android:label="@string/title_activity_waypoints" 
+            android:screenOrientation="portrait"
+			android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
     </application>
 
